--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
-name: untitled
-description: A web app that uses AngularDart Components
+name: angular_analyzer_plugin_example
+description: Example app with not working analyzer plugin
 version: 0.0.1
-#homepage: https://www.example.com
-#author: zmlcoch <email@example.com>
+author: zmlcoch <mlcoch.zdenek@gmail.com>
 
 environment:
   sdk: '>=1.24.0 <2.0.0'
